[gd_scene load_steps=4 format=4 uid="uid://djvepkc2qmg0l"]

[ext_resource type="Script" uid="uid://brpmdgn764q4h" path="res://ripple_manager.gd" id="1_e2o6t"]
[ext_resource type="Shader" uid="uid://c0s0pfcdi2hu4" path="res://ripple.gdshader" id="2_e2o6t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e2o6t"]
shader = ExtResource("2_e2o6t")
shader_parameter/num_circles = 0
shader_parameter/circle_data_pos_time = PackedVector4Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/circle_data_color = PackedVector4Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/time = 0.0
shader_parameter/speed_scale = 400.0
shader_parameter/ring_width = 3.0

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e2o6t")

[node name="SubViewportContainer_A" type="SubViewportContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport_A" type="SubViewport" parent="SubViewportContainer_A"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="ColorRect_A" type="ColorRect" parent="SubViewportContainer_A/SubViewport_A"]
material = SubResource("ShaderMaterial_e2o6t")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubViewportContainer_B" type="SubViewportContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport_B" type="SubViewport" parent="SubViewportContainer_B"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="ColorRect_B" type="ColorRect" parent="SubViewportContainer_B/SubViewport_B"]
material = SubResource("ShaderMaterial_e2o6t")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
position = Vector2(439, 283)
color = Color(1, 0.6862745, 1, 1)
polygon = PackedVector2Array(492, -187, 364, 218, -27, 236, -14, 19)
uv = PackedVector2Array(492, -187, 364, 218, -27, 236, -14, 19)

[node name="DisplayRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
